3_Semantic/compiler/y.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: dec_list

    2 dec_list: dec_list dec
    3         | dec

    4 dec: var_dec
    5    | fun_dec

    6 var_dec: type_spec id SEMI
    7        | type_spec id LBRACE num RBRACE SEMI

    8 type_spec: INT
    9          | VOID

   10 @1: %empty

   11 fun_dec: type_spec id @1 LPAREN params RPAREN comp_stmt

   12 params: param_list
   13       | VOID

   14 param_list: param_list COMMA param
   15           | param

   16 param: type_spec id
   17      | type_spec id LBRACE RBRACE

   18 comp_stmt: LCURLY local_dec stmt_list RCURLY

   19 local_dec: local_dec var_dec
   20          | %empty

   21 stmt_list: stmt_list stmt
   22          | %empty

   23 stmt: exp_stmt
   24     | comp_stmt
   25     | select_stmt
   26     | iter_stmt
   27     | ret_stmt

   28 exp_stmt: exp SEMI
   29         | SEMI

   30 select_stmt: IF LPAREN exp RPAREN stmt
   31            | IF LPAREN exp RPAREN stmt ELSE stmt

   32 iter_stmt: WHILE LPAREN exp RPAREN stmt

   33 ret_stmt: RETURN SEMI
   34         | RETURN exp SEMI

   35 exp: var ASSIGN exp
   36    | simple_exp

   37 var: id
   38    | id LBRACE exp RBRACE

   39 simple_exp: add_exp relop add_exp
   40           | add_exp

   41 relop: LE
   42      | LT
   43      | GT
   44      | GE
   45      | EQ
   46      | NE

   47 add_exp: add_exp addop term
   48        | term

   49 addop: PLUS
   50      | MINUS

   51 term: term mulop factor
   52     | factor

   53 mulop: TIMES
   54      | OVER

   55 factor: LPAREN exp RPAREN
   56       | var
   57       | call
   58       | num

   59 call: id LPAREN args RPAREN

   60 args: arg_list
   61     | %empty

   62 arg_list: arg_list COMMA exp
   63         | exp

   64 id: ID

   65 num: NUM


Terminals, with rules where they appear

$end (0) 0
error (256)
ELSE (258) 31
IF (259) 30 31
WHILE (260) 32
RETURN (261) 33 34
INT (262) 8
VOID (263) 9 13
ID (264) 64
NUM (265) 65
LPAREN (266) 11 30 31 32 55 59
RPAREN (267) 11 30 31 32 55 59
LBRACE (268) 7 17 38
RBRACE (269) 7 17 38
LCURLY (270) 18
RCURLY (271) 18
SEMI (272) 6 7 28 29 33 34
TIMES (273) 53
OVER (274) 54
PLUS (275) 49
MINUS (276) 50
LT (277) 42
LE (278) 41
GT (279) 43
GE (280) 44
EQ (281) 45
NE (282) 46
ASSIGN (283) 35
COMMA (284) 14 62
LOWER_THAN_ELSE (285)
ERROR (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
dec_list (34)
    on left: 2 3, on right: 1 2
dec (35)
    on left: 4 5, on right: 2 3
var_dec (36)
    on left: 6 7, on right: 4 19
type_spec (37)
    on left: 8 9, on right: 6 7 11 16 17
fun_dec (38)
    on left: 11, on right: 5
@1 (39)
    on left: 10, on right: 11
params (40)
    on left: 12 13, on right: 11
param_list (41)
    on left: 14 15, on right: 12 14
param (42)
    on left: 16 17, on right: 14 15
comp_stmt (43)
    on left: 18, on right: 11 24
local_dec (44)
    on left: 19 20, on right: 18 19
stmt_list (45)
    on left: 21 22, on right: 18 21
stmt (46)
    on left: 23 24 25 26 27, on right: 21 30 31 32
exp_stmt (47)
    on left: 28 29, on right: 23
select_stmt (48)
    on left: 30 31, on right: 25
iter_stmt (49)
    on left: 32, on right: 26
ret_stmt (50)
    on left: 33 34, on right: 27
exp (51)
    on left: 35 36, on right: 28 30 31 32 34 35 38 55 62 63
var (52)
    on left: 37 38, on right: 35 56
simple_exp (53)
    on left: 39 40, on right: 36
relop (54)
    on left: 41 42 43 44 45 46, on right: 39
add_exp (55)
    on left: 47 48, on right: 39 40 47
addop (56)
    on left: 49 50, on right: 47
term (57)
    on left: 51 52, on right: 47 48 51
mulop (58)
    on left: 53 54, on right: 51
factor (59)
    on left: 55 56 57 58, on right: 51 52
call (60)
    on left: 59, on right: 57
args (61)
    on left: 60 61, on right: 59
arg_list (62)
    on left: 62 63, on right: 60 62
id (63)
    on left: 64, on right: 6 7 11 16 17 37 38 59
num (64)
    on left: 65, on right: 7 58


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program    go to state 3
    dec_list   go to state 4
    dec        go to state 5
    var_dec    go to state 6
    type_spec  go to state 7
    fun_dec    go to state 8


State 1

    8 type_spec: INT .

    $default  reduce using rule 8 (type_spec)


State 2

    9 type_spec: VOID .

    $default  reduce using rule 9 (type_spec)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: dec_list .
    2 dec_list: dec_list . dec

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    dec        go to state 10
    var_dec    go to state 6
    type_spec  go to state 7
    fun_dec    go to state 8


State 5

    3 dec_list: dec .

    $default  reduce using rule 3 (dec_list)


State 6

    4 dec: var_dec .

    $default  reduce using rule 4 (dec)


State 7

    6 var_dec: type_spec . id SEMI
    7        | type_spec . id LBRACE num RBRACE SEMI
   11 fun_dec: type_spec . id @1 LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 11

    id  go to state 12


State 8

    5 dec: fun_dec .

    $default  reduce using rule 5 (dec)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 dec_list: dec_list dec .

    $default  reduce using rule 2 (dec_list)


State 11

   64 id: ID .

    $default  reduce using rule 64 (id)


State 12

    6 var_dec: type_spec id . SEMI
    7        | type_spec id . LBRACE num RBRACE SEMI
   11 fun_dec: type_spec id . @1 LPAREN params RPAREN comp_stmt

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14

    $default  reduce using rule 10 (@1)

    @1  go to state 15


State 13

    7 var_dec: type_spec id LBRACE . num RBRACE SEMI

    NUM  shift, and go to state 16

    num  go to state 17


State 14

    6 var_dec: type_spec id SEMI .

    $default  reduce using rule 6 (var_dec)


State 15

   11 fun_dec: type_spec id @1 . LPAREN params RPAREN comp_stmt

    LPAREN  shift, and go to state 18


State 16

   65 num: NUM .

    $default  reduce using rule 65 (num)


State 17

    7 var_dec: type_spec id LBRACE num . RBRACE SEMI

    RBRACE  shift, and go to state 19


State 18

   11 fun_dec: type_spec id @1 LPAREN . params RPAREN comp_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 20

    type_spec   go to state 21
    params      go to state 22
    param_list  go to state 23
    param       go to state 24


State 19

    7 var_dec: type_spec id LBRACE num RBRACE . SEMI

    SEMI  shift, and go to state 25


State 20

    9 type_spec: VOID .
   13 params: VOID .

    RPAREN    reduce using rule 13 (params)
    $default  reduce using rule 9 (type_spec)


State 21

   16 param: type_spec . id
   17      | type_spec . id LBRACE RBRACE

    ID  shift, and go to state 11

    id  go to state 26


State 22

   11 fun_dec: type_spec id @1 LPAREN params . RPAREN comp_stmt

    RPAREN  shift, and go to state 27


State 23

   12 params: param_list .
   14 param_list: param_list . COMMA param

    COMMA  shift, and go to state 28

    $default  reduce using rule 12 (params)


State 24

   15 param_list: param .

    $default  reduce using rule 15 (param_list)


State 25

    7 var_dec: type_spec id LBRACE num RBRACE SEMI .

    $default  reduce using rule 7 (var_dec)


State 26

   16 param: type_spec id .
   17      | type_spec id . LBRACE RBRACE

    LBRACE  shift, and go to state 29

    $default  reduce using rule 16 (param)


State 27

   11 fun_dec: type_spec id @1 LPAREN params RPAREN . comp_stmt

    LCURLY  shift, and go to state 30

    comp_stmt  go to state 31


State 28

   14 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_spec  go to state 21
    param      go to state 32


State 29

   17 param: type_spec id LBRACE . RBRACE

    RBRACE  shift, and go to state 33


State 30

   18 comp_stmt: LCURLY . local_dec stmt_list RCURLY

    $default  reduce using rule 20 (local_dec)

    local_dec  go to state 34


State 31

   11 fun_dec: type_spec id @1 LPAREN params RPAREN comp_stmt .

    $default  reduce using rule 11 (fun_dec)


State 32

   14 param_list: param_list COMMA param .

    $default  reduce using rule 14 (param_list)


State 33

   17 param: type_spec id LBRACE RBRACE .

    $default  reduce using rule 17 (param)


State 34

   18 comp_stmt: LCURLY local_dec . stmt_list RCURLY
   19 local_dec: local_dec . var_dec

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 22 (stmt_list)

    var_dec    go to state 35
    type_spec  go to state 36
    stmt_list  go to state 37


State 35

   19 local_dec: local_dec var_dec .

    $default  reduce using rule 19 (local_dec)


State 36

    6 var_dec: type_spec . id SEMI
    7        | type_spec . id LBRACE num RBRACE SEMI

    ID  shift, and go to state 11

    id  go to state 38


State 37

   18 comp_stmt: LCURLY local_dec stmt_list . RCURLY
   21 stmt_list: stmt_list . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 30
    RCURLY  shift, and go to state 43
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 46
    exp_stmt     go to state 47
    select_stmt  go to state 48
    iter_stmt    go to state 49
    ret_stmt     go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    add_exp      go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    id           go to state 58
    num          go to state 59


State 38

    6 var_dec: type_spec id . SEMI
    7        | type_spec id . LBRACE num RBRACE SEMI

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14


State 39

   30 select_stmt: IF . LPAREN exp RPAREN stmt
   31            | IF . LPAREN exp RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 60


State 40

   32 iter_stmt: WHILE . LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 61


State 41

   33 ret_stmt: RETURN . SEMI
   34         | RETURN . exp SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    SEMI    shift, and go to state 62

    exp         go to state 63
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    id          go to state 58
    num         go to state 59


State 42

   55 factor: LPAREN . exp RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    exp         go to state 64
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    id          go to state 58
    num         go to state 59


State 43

   18 comp_stmt: LCURLY local_dec stmt_list RCURLY .

    $default  reduce using rule 18 (comp_stmt)


State 44

   29 exp_stmt: SEMI .

    $default  reduce using rule 29 (exp_stmt)


State 45

   24 stmt: comp_stmt .

    $default  reduce using rule 24 (stmt)


State 46

   21 stmt_list: stmt_list stmt .

    $default  reduce using rule 21 (stmt_list)


State 47

   23 stmt: exp_stmt .

    $default  reduce using rule 23 (stmt)


State 48

   25 stmt: select_stmt .

    $default  reduce using rule 25 (stmt)


State 49

   26 stmt: iter_stmt .

    $default  reduce using rule 26 (stmt)


State 50

   27 stmt: ret_stmt .

    $default  reduce using rule 27 (stmt)


State 51

   28 exp_stmt: exp . SEMI

    SEMI  shift, and go to state 65


State 52

   35 exp: var . ASSIGN exp
   56 factor: var .

    ASSIGN  shift, and go to state 66

    $default  reduce using rule 56 (factor)


State 53

   36 exp: simple_exp .

    $default  reduce using rule 36 (exp)


State 54

   39 simple_exp: add_exp . relop add_exp
   40           | add_exp .
   47 add_exp: add_exp . addop term

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    LT     shift, and go to state 69
    LE     shift, and go to state 70
    GT     shift, and go to state 71
    GE     shift, and go to state 72
    EQ     shift, and go to state 73
    NE     shift, and go to state 74

    $default  reduce using rule 40 (simple_exp)

    relop  go to state 75
    addop  go to state 76


State 55

   48 add_exp: term .
   51 term: term . mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 48 (add_exp)

    mulop  go to state 79


State 56

   52 term: factor .

    $default  reduce using rule 52 (term)


State 57

   57 factor: call .

    $default  reduce using rule 57 (factor)


State 58

   37 var: id .
   38    | id . LBRACE exp RBRACE
   59 call: id . LPAREN args RPAREN

    LPAREN  shift, and go to state 80
    LBRACE  shift, and go to state 81

    $default  reduce using rule 37 (var)


State 59

   58 factor: num .

    $default  reduce using rule 58 (factor)


State 60

   30 select_stmt: IF LPAREN . exp RPAREN stmt
   31            | IF LPAREN . exp RPAREN stmt ELSE stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    exp         go to state 82
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    id          go to state 58
    num         go to state 59


State 61

   32 iter_stmt: WHILE LPAREN . exp RPAREN stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    exp         go to state 83
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    id          go to state 58
    num         go to state 59


State 62

   33 ret_stmt: RETURN SEMI .

    $default  reduce using rule 33 (ret_stmt)


State 63

   34 ret_stmt: RETURN exp . SEMI

    SEMI  shift, and go to state 84


State 64

   55 factor: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 85


State 65

   28 exp_stmt: exp SEMI .

    $default  reduce using rule 28 (exp_stmt)


State 66

   35 exp: var ASSIGN . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    exp         go to state 86
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    id          go to state 58
    num         go to state 59


State 67

   49 addop: PLUS .

    $default  reduce using rule 49 (addop)


State 68

   50 addop: MINUS .

    $default  reduce using rule 50 (addop)


State 69

   42 relop: LT .

    $default  reduce using rule 42 (relop)


State 70

   41 relop: LE .

    $default  reduce using rule 41 (relop)


State 71

   43 relop: GT .

    $default  reduce using rule 43 (relop)


State 72

   44 relop: GE .

    $default  reduce using rule 44 (relop)


State 73

   45 relop: EQ .

    $default  reduce using rule 45 (relop)


State 74

   46 relop: NE .

    $default  reduce using rule 46 (relop)


State 75

   39 simple_exp: add_exp relop . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    var      go to state 87
    add_exp  go to state 88
    term     go to state 55
    factor   go to state 56
    call     go to state 57
    id       go to state 58
    num      go to state 59


State 76

   47 add_exp: add_exp addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    var     go to state 87
    term    go to state 89
    factor  go to state 56
    call    go to state 57
    id      go to state 58
    num     go to state 59


State 77

   53 mulop: TIMES .

    $default  reduce using rule 53 (mulop)


State 78

   54 mulop: OVER .

    $default  reduce using rule 54 (mulop)


State 79

   51 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    var     go to state 87
    factor  go to state 90
    call    go to state 57
    id      go to state 58
    num     go to state 59


State 80

   59 call: id LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    $default  reduce using rule 61 (args)

    exp         go to state 91
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    args        go to state 92
    arg_list    go to state 93
    id          go to state 58
    num         go to state 59


State 81

   38 var: id LBRACE . exp RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    exp         go to state 94
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    id          go to state 58
    num         go to state 59


State 82

   30 select_stmt: IF LPAREN exp . RPAREN stmt
   31            | IF LPAREN exp . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 95


State 83

   32 iter_stmt: WHILE LPAREN exp . RPAREN stmt

    RPAREN  shift, and go to state 96


State 84

   34 ret_stmt: RETURN exp SEMI .

    $default  reduce using rule 34 (ret_stmt)


State 85

   55 factor: LPAREN exp RPAREN .

    $default  reduce using rule 55 (factor)


State 86

   35 exp: var ASSIGN exp .

    $default  reduce using rule 35 (exp)


State 87

   56 factor: var .

    $default  reduce using rule 56 (factor)


State 88

   39 simple_exp: add_exp relop add_exp .
   47 add_exp: add_exp . addop term

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68

    $default  reduce using rule 39 (simple_exp)

    addop  go to state 76


State 89

   47 add_exp: add_exp addop term .
   51 term: term . mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 47 (add_exp)

    mulop  go to state 79


State 90

   51 term: term mulop factor .

    $default  reduce using rule 51 (term)


State 91

   63 arg_list: exp .

    $default  reduce using rule 63 (arg_list)


State 92

   59 call: id LPAREN args . RPAREN

    RPAREN  shift, and go to state 97


State 93

   60 args: arg_list .
   62 arg_list: arg_list . COMMA exp

    COMMA  shift, and go to state 98

    $default  reduce using rule 60 (args)


State 94

   38 var: id LBRACE exp . RBRACE

    RBRACE  shift, and go to state 99


State 95

   30 select_stmt: IF LPAREN exp RPAREN . stmt
   31            | IF LPAREN exp RPAREN . stmt ELSE stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 100
    exp_stmt     go to state 47
    select_stmt  go to state 48
    iter_stmt    go to state 49
    ret_stmt     go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    add_exp      go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    id           go to state 58
    num          go to state 59


State 96

   32 iter_stmt: WHILE LPAREN exp RPAREN . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 101
    exp_stmt     go to state 47
    select_stmt  go to state 48
    iter_stmt    go to state 49
    ret_stmt     go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    add_exp      go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    id           go to state 58
    num          go to state 59


State 97

   59 call: id LPAREN args RPAREN .

    $default  reduce using rule 59 (call)


State 98

   62 arg_list: arg_list COMMA . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    exp         go to state 102
    var         go to state 52
    simple_exp  go to state 53
    add_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    call        go to state 57
    id          go to state 58
    num         go to state 59


State 99

   38 var: id LBRACE exp RBRACE .

    $default  reduce using rule 38 (var)


State 100

   30 select_stmt: IF LPAREN exp RPAREN stmt .
   31            | IF LPAREN exp RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 103

    $default  reduce using rule 30 (select_stmt)


State 101

   32 iter_stmt: WHILE LPAREN exp RPAREN stmt .

    $default  reduce using rule 32 (iter_stmt)


State 102

   62 arg_list: arg_list COMMA exp .

    $default  reduce using rule 62 (arg_list)


State 103

   31 select_stmt: IF LPAREN exp RPAREN stmt ELSE . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 104
    exp_stmt     go to state 47
    select_stmt  go to state 48
    iter_stmt    go to state 49
    ret_stmt     go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    add_exp      go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    id           go to state 58
    num          go to state 59


State 104

   31 select_stmt: IF LPAREN exp RPAREN stmt ELSE stmt .

    $default  reduce using rule 31 (select_stmt)
